feature(apigateway): remove online query in request info #NP-48657