@@ -5,14 +5,10 @@ import static java.util.function.Predicate.not;
 import static no.unit.nva.auth.CognitoUserInfo.ELEMENTS_DELIMITER;
 import static nva.commons.apigateway.RequestInfoConstants.AUTHORIZATION_FAILURE_WARNING;
 import static nva.commons.apigateway.RequestInfoConstants.BACKEND_SCOPE_AS_DEFINED_IN_IDENTITY_SERVICE;
+import static nva.commons.apigateway.RequestInfoConstants.CLAIMS_PATH;
 import static nva.commons.apigateway.RequestInfoConstants.CLIENT_ID;
-import static nva.commons.apigateway.RequestInfoConstants.CUSTOMER_ID;
-import static nva.commons.apigateway.RequestInfoConstants.DEFAULT_COGNITO_URI;
 import static nva.commons.apigateway.RequestInfoConstants.DOMAIN_NAME_FIELD;
-import static nva.commons.apigateway.RequestInfoConstants.EXTERNAL_USER_POOL_URI;
-import static nva.commons.apigateway.RequestInfoConstants.FEIDE_ID;
 import static nva.commons.apigateway.RequestInfoConstants.HEADERS_FIELD;
-import static nva.commons.apigateway.RequestInfoConstants.ISS;
 import static nva.commons.apigateway.RequestInfoConstants.METHOD_ARN_FIELD;
 import static nva.commons.apigateway.RequestInfoConstants.MISSING_FROM_HEADERS;
 import static nva.commons.apigateway.RequestInfoConstants.MISSING_FROM_PATH_PARAMETERS;
@@ -21,17 +17,10 @@ import static nva.commons.apigateway.RequestInfoConstants.MISSING_FROM_REQUEST_C
 import static nva.commons.apigateway.RequestInfoConstants.MULTI_VALUE_QUERY_STRING_PARAMETERS_FIELD;
 import static nva.commons.apigateway.RequestInfoConstants.PATH_FIELD;
 import static nva.commons.apigateway.RequestInfoConstants.PATH_PARAMETERS_FIELD;
-import static nva.commons.apigateway.RequestInfoConstants.PERSON_AFFILIATION;
-import static nva.commons.apigateway.RequestInfoConstants.PERSON_CRISTIN_ID;
 import static nva.commons.apigateway.RequestInfoConstants.PERSON_GROUPS;
-import static nva.commons.apigateway.RequestInfoConstants.PERSON_NIN;
 import static nva.commons.apigateway.RequestInfoConstants.QUERY_STRING_PARAMETERS_FIELD;
 import static nva.commons.apigateway.RequestInfoConstants.REQUEST_CONTEXT_FIELD;
 import static nva.commons.apigateway.RequestInfoConstants.SCOPES_CLAIM;
-import static nva.commons.apigateway.RequestInfoConstants.TOP_LEVEL_ORG_CRISTIN_ID;
-import static nva.commons.apigateway.RequestInfoConstants.USER_NAME;
-import static nva.commons.apigateway.RequestInfoConstants.VIEWING_SCOPE_EXCLUDED;
-import static nva.commons.apigateway.RequestInfoConstants.VIEWING_SCOPE_INCLUDED;
 import static nva.commons.apigateway.RestConfig.defaultRestObjectMapper;
 import static nva.commons.core.attempt.Try.attempt;
 import static nva.commons.core.paths.UriWrapper.HTTPS;
@@ -45,7 +34,6 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.net.HttpHeaders;
 import java.io.InputStream;
 import java.net.URI;
-import java.net.http.HttpClient;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
@@ -53,33 +41,26 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import no.unit.nva.auth.CognitoUserInfo;
-import no.unit.nva.auth.FetchUserInfo;
 import nva.commons.apigateway.exceptions.ApiIoException;
 import nva.commons.apigateway.exceptions.BadRequestException;
 import nva.commons.apigateway.exceptions.UnauthorizedException;
 import nva.commons.core.JacocoGenerated;
 import nva.commons.core.SingletonCollector;
 import nva.commons.core.StringUtils;
-import nva.commons.core.attempt.Failure;
-import nva.commons.core.exceptions.ExceptionUtils;
 import nva.commons.core.ioutils.IoUtils;
 import nva.commons.core.paths.UriWrapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 @SuppressWarnings("PMD.GodClass")
-public class RequestInfo {
+public final class RequestInfo {
 
     public static final String ERROR_FETCHING_COGNITO_INFO = "Could not fetch user information from Cognito:{}";
     private static final Logger logger = LoggerFactory.getLogger(RequestInfo.class);
     private static final ObjectMapper mapper = defaultRestObjectMapper;
-    private HttpClient httpClient;
-    private final Supplier<URI> cognitoUri;
-    private final Supplier<URI> e2eTestsUserInfoUri;
+    private static final String THIRD_PARTY_SCOPE_PREFIX = "https://api.nva.unit.no/scopes/third-party";
     @JsonProperty(HEADERS_FIELD)
     private Map<String, String> headers;
     @JsonProperty(PATH_FIELD)
@@ -98,12 +79,6 @@ public class RequestInfo {
     @JsonAnySetter
     private Map<String, Object> otherProperties;
 
-    public RequestInfo(HttpClient httpClient, Supplier<URI> cognitoUri, Supplier<URI> e2eTestsUserInfoUri) {
-        this.httpClient = httpClient;
-        this.cognitoUri = cognitoUri;
-        this.e2eTestsUserInfoUri = e2eTestsUserInfoUri;
-    }
-
     private RequestInfo() {
         this.headers = new HashMap<>();
         this.pathParameters = new HashMap<>();
@@ -111,20 +86,15 @@ public class RequestInfo {
         this.multiValueQueryStringParameters = new HashMap<>();
         this.otherProperties = new LinkedHashMap<>(); // ordinary HashMap and ConcurrentHashMap fail.
         this.requestContext = defaultRestObjectMapper.createObjectNode();
-        this.httpClient = HttpClient.newBuilder().build();
-        this.cognitoUri = DEFAULT_COGNITO_URI;
-        this.e2eTestsUserInfoUri = RequestInfoConstants.E2E_TESTING_USER_INFO_ENDPOINT;
     }
 
-    public static RequestInfo fromRequest(InputStream requestStream, HttpClient httpClient) throws ApiIoException {
+    public static RequestInfo fromRequest(InputStream requestStream) throws ApiIoException {
         String inputString = IoUtils.streamToString(requestStream);
-        return fromString(inputString, httpClient);
+        return fromString(inputString);
     }
 
-    public static RequestInfo fromString(String inputString, HttpClient httpClient) throws ApiIoException {
-        var requestInfo = new ApiMessageParser<>(mapper).getRequestInfo(inputString);
-        requestInfo.setHttpClient(httpClient);
-        return requestInfo;
+    public static RequestInfo fromString(String inputString) throws ApiIoException {
+        return new ApiMessageParser<>(mapper).getRequestInfo(inputString);
     }
 
     @JsonIgnore
@@ -210,11 +180,6 @@ public class RequestInfo {
         this.otherProperties = otherProperties;
     }
 
-    @JacocoGenerated
-    public void setHttpClient(HttpClient httpClient) {
-        this.httpClient = httpClient;
-    }
-
     public Map<String, String> getHeaders() {
         return headers;
     }
@@ -287,23 +252,26 @@ public class RequestInfo {
     }
 
     public boolean userIsAuthorized(AccessRight accessRight) {
-        return checkAuthorizationOnline(accessRight)
-               || checkAuthorizationFromContext(accessRight);
+        return checkAuthorizationFromContext(accessRight);
     }
 
     public List<AccessRight> getAccessRights() {
-        return extractAccessRightsForTests().or(this::fetchAccessRights).orElse(Collections.emptyList());
+        return fetchAccessRights().orElse(Collections.emptyList());
     }
 
     private Optional<List<AccessRight>> fetchAccessRights() {
         return fetchUserInfo().map(CognitoUserInfo::getAccessRights).map(this::parseAccessRights);
     }
 
+    private Optional<CognitoUserInfo> fetchUserInfo() {
+        return Optional.of(CognitoUserInfo.fromString(getRequestContext().at(CLAIMS_PATH).toString()));
+    }
+
     private List<AccessRight> parseAccessRights(String value) {
         return Arrays.stream(value.split(ELEMENTS_DELIMITER))
                    .filter(array -> !StringUtils.isEmpty(array))
                    .map(AccessRight::fromPersistedString)
-                   .collect(Collectors.toList());
+                   .toList();
     }
 
     @JacocoGenerated
@@ -322,22 +290,22 @@ public class RequestInfo {
 
     @JsonIgnore
     public String getUserName() throws UnauthorizedException {
-        return extractUserNameForTests().or(this::fetchUserName).orElseThrow(UnauthorizedException::new);
+        return fetchUserName().orElseThrow(UnauthorizedException::new);
     }
 
     @JsonIgnore
     public ViewingScope getViewingScope() throws UnauthorizedException {
-        return extractViewingScopeForTests().or(this::fetchViewingScope).orElseThrow(UnauthorizedException::new);
+        return fetchViewingScope().orElseThrow(UnauthorizedException::new);
     }
 
     @JsonIgnore
     public Optional<String> getFeideId() {
-        return extractFeideIdForTests().or(this::fetchFeideId);
+        return fetchFeideId();
     }
 
     @JsonIgnore
     public Optional<URI> getTopLevelOrgCristinId() {
-        return extractTopLevelOrgForTests().or(this::fetchTopLevelOrgCristinId);
+        return fetchTopLevelOrgCristinId();
     }
 
     @JsonIgnore
@@ -348,25 +316,22 @@ public class RequestInfo {
     @JsonIgnore
     public URI getCurrentCustomer() throws UnauthorizedException {
         return fetchCustomerId().or(this::fetchCustomerIdFromContext)
-                   .or(this::extractCustomerIdForTests)
                    .orElseThrow(UnauthorizedException::new);
     }
 
     @JsonIgnore
     public URI getPersonCristinId() throws UnauthorizedException {
-        return extractPersonCristinIdForTests().or(this::fetchPersonCristinId)
-                   .orElseThrow(UnauthorizedException::new);
+        return fetchPersonCristinId().orElseThrow(UnauthorizedException::new);
     }
 
     @JsonIgnore
     public URI getPersonAffiliation() throws UnauthorizedException {
-        return extractPersonAffiliationForTests().or(this::fetchPersonAffiliation)
-                   .orElseThrow(UnauthorizedException::new);
+        return fetchPersonAffiliation().orElseThrow(UnauthorizedException::new);
     }
 
     @JsonIgnore
     public String getPersonNin() {
-        return extractPersonNinForTests().or(this::fetchPersonNin).orElseThrow(IllegalStateException::new);
+        return fetchPersonNin().orElseThrow(IllegalStateException::new);
     }
 
     public boolean clientIsInternalBackend() {
@@ -375,17 +340,16 @@ public class RequestInfo {
     }
 
     public boolean clientIsThirdParty() {
-        return getRequestContextParameterOpt(ISS).map(
-            value -> value.equals(EXTERNAL_USER_POOL_URI.get())
-        ).orElse(false);
+        return getRequestContextParameterOpt(SCOPES_CLAIM)
+                   .map(string ->
+                            Arrays.stream(string.split(","))
+                                .anyMatch(value -> value.startsWith(
+                                    THIRD_PARTY_SCOPE_PREFIX)))
+                   .orElse(false);
     }
 
     private Optional<String> fetchFeideId() {
         return fetchUserInfo().map(CognitoUserInfo::getFeideId);
-    }
-
-    private Optional<String> extractFeideIdForTests() {
-        return getRequestContextParameterOpt(FEIDE_ID);
     }
 
     private Optional<URI> fetchCustomerIdFromContext() {
@@ -397,34 +361,8 @@ public class RequestInfo {
                    .toOptional();
     }
 
-    private Optional<URI> extractCustomerIdForTests() {
-        return getRequestContextParameterOpt(CUSTOMER_ID).map(URI::create);
-    }
-
-    private Optional<URI> extractTopLevelOrgForTests() {
-        return getRequestContextParameterOpt(TOP_LEVEL_ORG_CRISTIN_ID).map(URI::create);
-    }
-
     private Optional<URI> fetchTopLevelOrgCristinId() {
         return fetchUserInfo().map(CognitoUserInfo::getTopOrgCristinId);
-    }
-
-    private void logOnlineFetchResult(Failure<CognitoUserInfo> fail) {
-        logger.warn(ERROR_FETCHING_COGNITO_INFO, ExceptionUtils.stackTraceInSingleLine(fail.getException()));
-    }
-
-    private Optional<ViewingScope> extractViewingScopeForTests() {
-        var includedString = getRequestContextParameterOpt(VIEWING_SCOPE_INCLUDED);
-        var excludedString = getRequestContextParameterOpt(VIEWING_SCOPE_EXCLUDED);
-
-        if (includedString.isEmpty() || excludedString.isEmpty()) {
-            return Optional.empty();
-        }
-        return Optional.of(ViewingScope.from(includedString.get(), excludedString.get()));
-    }
-
-    private Optional<String> extractUserNameForTests() {
-        return getRequestContextParameterOpt(USER_NAME);
     }
 
     private Optional<String> fetchUserName() {
@@ -436,24 +374,12 @@ public class RequestInfo {
             userInfo -> ViewingScope.from(userInfo.getViewingScopeIncluded(), userInfo.getViewingScopeExcluded()));
     }
 
-    private Optional<URI> extractPersonCristinIdForTests() {
-        return getRequestContextParameterOpt(PERSON_CRISTIN_ID).map(URI::create);
-    }
-
-    private Optional<URI> extractPersonAffiliationForTests() {
-        return getRequestContextParameterOpt(PERSON_AFFILIATION).map(URI::create);
-    }
-
     private Optional<URI> fetchPersonCristinId() {
         return fetchUserInfo().map(CognitoUserInfo::getPersonCristinId);
     }
 
     private Optional<URI> fetchPersonAffiliation() {
         return fetchUserInfo().map(CognitoUserInfo::getPersonAffiliation);
-    }
-
-    private Optional<String> extractPersonNinForTests() {
-        return getRequestContextParameterOpt(PERSON_NIN);
     }
 
     private Optional<String> fetchPersonNin() {
@@ -476,45 +402,6 @@ public class RequestInfo {
 
     private Stream<AccessRightEntry> fetchAvailableAccessRightsFromContext() {
         return getRequestContextParameterOpt(PERSON_GROUPS).stream().flatMap(AccessRightEntry::fromCsv);
-    }
-
-    private Boolean checkAuthorizationOnline(AccessRight accessRight) {
-        var accessRightAtCustomer = fetchCustomerId().map(
-            customer -> new AccessRightEntry(accessRight, customer));
-
-        var availableRights = fetchAvailableRights();
-        return accessRightAtCustomer.map(availableRights::contains).orElse(false);
-    }
-
-    private List<AccessRightEntry> fetchAvailableRights() {
-        var userInfo = fetchUserInfo();
-        return userInfo
-                   .map(CognitoUserInfo::getAccessRights)
-                   .map(accessRightEntryStr -> AccessRightEntry.fromCsvForCustomer(accessRightEntryStr, userInfo.get()
-                                                                                                            .getCurrentCustomer()))
-                   .map(stream -> stream.collect(Collectors.toList()))
-                   .orElseGet(Collections::emptyList);
-    }
-
-    private Optional<List<AccessRight>> extractAccessRightsForTests() {
-        return getRequestContextParameterOpt(PERSON_GROUPS)
-                   .map(AccessRightEntry::fromCsv)
-                   .map(stream -> stream.map(AccessRightEntry::getAccessRight))
-                   .map(stream -> stream.collect(Collectors.toList()));
-    }
-
-    private Optional<CognitoUserInfo> fetchUserInfo() {
-        return attempt(() -> fetchUserInfo(cognitoUri)).or(() -> fetchUserInfo(e2eTestsUserInfoUri))
-                   .toOptional(this::logOnlineFetchResult);
-    }
-
-    private CognitoUserInfo fetchUserInfo(Supplier<URI> cognitoUri) {
-        var userInfo = new FetchUserInfo(httpClient, cognitoUri, extractAuthorizationHeader());
-        return userInfo.fetch();
-    }
-
-    private String extractAuthorizationHeader() {
-        return this.getHeader(HttpHeaders.AUTHORIZATION);
     }
 
     private Optional<URI> fetchCustomerId() {
